fixed tap-highlight-colot on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ body {
   cursor: pointer;
   font-size: 1.5rem;
   color: #fff;
+  -webkit-tap-highlight-color: transparent;
 }
 .slider i.fa-angle-right {
   right: -43px;
